--- a/scss/components/_skills.scss
+++ b/scss/components/_skills.scss
@@ -1,133 +1,125 @@
 @use '../utils/colors' as colors;
 @use '../utils/variables' as variables;
 
-// Section Header
-.skills-header {
-  height: 28px;
-  margin: 2px 0;
-  padding: 0;
-  align-items: left;
-  background: rgba(0, 0, 0, 0.05);
-  border: variables.$border-groove;
-  font-weight: bold;
-  > * {
-    font-size: 14px;
-    text-align: left;
-  }
-  .skill-name {
-    grid-column: 1;
-    font-weight: bold;
-    padding-left: 5px;
-    text-align: left;
-  }
-  .skill-target {
-    grid-column: 2;
-    font-weight: bold;
-    padding-left: 5px;
-    text-align: left;
-  }
-  .skill-fail {
-    font-weight: bold;
-    padding-left: 5px;
-    text-align: left;
-    grid-column: 3;
-  }
-  .skill-controls {
-    font-weight: bold;
-    padding-left: 5px;
-    text-align: right;
-    align-items: right;
-    grid-column: -1;
-  }
-}
-
-/* ----------------------------------------- */
-/*  Items Lists                              */
-/* ----------------------------------------- */
-
-.skills-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  overflow-y: auto;
-  scrollbar-width: thin;
-  color: colors.$c-tan;
-
-  // Item Name
-  .skill-name {
-    align-content: center;
-    grid-column: 1;
-    margin: 0;
-    overflow: hidden;
-    font-size: 13px;
-    text-align: left;
+.character {
+  // Section Header
+  .skills-header {
+    height: 28px;
+    margin: 2px 0;
+    padding: 0;
     align-items: left;
-    h3, h4 {
-      margin: 0;
-      white-space: nowrap;
-      overflow-x: hidden;
+    background: rgba(0, 0, 0, 0.05);
+    border: variables.$border-groove;
+    font-weight: bold;
+    > * {
+      font-size: 14px;
+      text-align: left;
     }
-  }
-  .skill-target {
-    align-content: center;
-    grid-column: 2;
-    margin: 0;
-    overflow: hidden;
-    font-size: 13px;
-    padding-left: 5px;
-    text-align: left;
-  }
-  .skill-fail {
-    align-content: center;
-    grid-column: 1;
-    margin: 0;
-    overflow: hidden;
-    font-size: 13px;
-    padding-left: 5px;
-    text-align: left;
-    grid-column: 3;
-  }
-
-  // Control Buttons
-  .skill-controls {
-    align-content: center;
-    justify-items: end;
-    grid-column: 4;
-    a {
-      font-size: 12px;
-      text-align: right;
-      margin: 0 6px;
-    }
-  }
-
-  // Individual Skill
-  .item {
-    align-items: left;
-    padding: 0 2px; // to align with the header border
-    border-bottom: 1px solid colors.$c-faint;
-    &:last-child { border-bottom: none; }
     .skill-name {
-        display: flex;
-      color: colors.$c-dark;
-      .skill-image {
-        flex: 0 0 30px;
-        height: 30px;
-        background-size: 30px;
-        border: none;
-        margin-right: 5px;
+      grid-column: 1;
+      font-weight: bold;
+      padding-left: 5px;
+      text-align: left;
+    }
+    .skill-target {
+      grid-column: 2;
+      font-weight: bold;
+      padding-left: 5px;
+      text-align: left;
+    }
+    .skill-fail {
+      font-weight: bold;
+      padding-left: 5px;
+      text-align: left;
+      grid-column: 3;
+    }
+    .skill-controls {
+      font-weight: bold;
+      padding-left: 5px;
+      text-align: right;
+      align-items: right;
+      grid-column: -1;
+    }
+  }
+
+  /* ----------------------------------------- */
+  /*  Items Lists                              */
+  /* ----------------------------------------- */
+
+  .skills-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    color: colors.$c-tan;
+
+    // Item Name
+    .skill-name {
+      align-content: center;
+      grid-column: 1;
+      margin: 0;
+      overflow: hidden;
+      font-size: 13px;
+      text-align: left;
+      align-items: left;
+      h3, h4 {
+        margin: 0;
+        white-space: nowrap;
+        overflow-x: hidden;
+      }
+    }
+    .skill-target {
+      align-content: center;
+      grid-column: 2;
+      margin: 0;
+      overflow: hidden;
+      font-size: 13px;
+      padding-left: 5px;
+      text-align: left;
+    }
+    .skill-fail {
+      align-content: center;
+      grid-column: 1;
+      margin: 0;
+      overflow: hidden;
+      font-size: 13px;
+      padding-left: 5px;
+      text-align: left;
+      grid-column: 3;
+    }
+
+    // Control Buttons
+    .skill-controls {
+      align-content: center;
+      justify-items: end;
+      grid-column: 4;
+      a {
+        font-size: 12px;
+        text-align: right;
+        margin: 0 6px;
       }
     }
 
-  }
+    // Individual Skill
+    .item {
+      align-items: left;
+      padding: 0 2px; // to align with the header border
+      border-bottom: 1px solid colors.$c-faint;
+      &:last-child { border-bottom: none; }
+      .skill-name {
+          display: flex;
+        color: colors.$c-dark;
+        .skill-image {
+          flex: 0 0 30px;
+          height: 30px;
+          background-size: 30px;
+          border: none;
+          margin-right: 5px;
+        }
+      }
 
-}
+    }
 
-.skills {
-  ol {
-    display: grid;
-  }
-  li {
-    display: grid;
-    grid-template-columns: auto 50px 60px 80px;
   }
 }
